--- a/responsive.css
+++ b/responsive.css
@@ -36,6 +36,7 @@
     .menu-icon {
         display: block;
     }
+    .header-left h1 {font-size: 28px}
 
     /* Stylesheet Lutfi */
     .hal-utama {
