--- a/responsive.css
+++ b/responsive.css
@@ -29,14 +29,59 @@
         width: 100%;
     }
     /* Stylesheet Moni Yunitasari */
-    .header-right {
+     .header-right {
         display: none;
+    }
+
+    .topnav .header-right a {
+        display: none;
+    }
+
+    .topnav a .menu-icon {
+        float: right;
+        display: block;
+    }
+
+    .topnav .header-left,
+    .topnav .header-right {
+        float: none;
+    }
+
+    .header-left h1 {
+        font-size: 25px
+    }
+    
+    .logo {
+        width:120px;
+        float: right}
+
+    .topnav .responsive {
+        position: relative;
+    }
+
+    .topnav .responsive .menu-icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .topnav .responsive a {
+        float: none;
+        display: block;
+        text-align: center;
+    }
+
+    .topnav.responsive .header-left a {
+        display: inline-block;
     }
 
     .menu-icon {
         display: block;
+        float: right;
+        position: absolute;
+        right: auto;
+        top: 0;
     }
-    .header-left h1 {font-size: 28px}
 
     /* Stylesheet Lutfi */
     .hal-utama {
